# Terra

./: netlify.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci-api.yml  ci-contracts.yml  ci-dapp.yml  ci-intelligence.yml  ci-website.yml
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/blog/: page.tsx
terra-app/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
terra-app/apps/api/: package.json
terra-app/apps/api/src/: index.ts
terra-app/apps/dapp/: .eslintrc.js  App.tsx  app.json  package.json  tsconfig.json
terra-intelligence/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
terra-intelligence/api/: main.py
terra-intelligence/api/routers/: agents.py  assistant.py  discovery.py  studio.py
terra-intelligence/services/agents/: __init__.py  agent.py
terra-intelligence/services/assistant/: __init__.py  assistant.py
terra-intelligence/services/discovery/: __init__.py  discovery.py
terra-intelligence/services/shared/: __init__.py  graph.py  models.py
terra-intelligence/services/studio/: __init__.py  studio.py
terra-website/: .env.example  README.md  output.css  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
terra-website/app/: globals.css  layout.tsx  page.tsx
terra-website/app/docs/: page.tsx
terra-website/components/: CTA.tsx  CookieConsent.tsx  DeveloperSection.tsx  Ecosystem.tsx  Features.tsx  Footer.tsx  GlassSurface.css  GlassSurface.tsx  Hero.tsx  Navbar.tsx  NetworkActivity.tsx  Primitives.tsx  SocialFeatures.tsx  TerraShowcase.tsx
(+40 files in other folders)
