[project]
name = "terra-intelligence"
version = "0.1.0"
description = "AI services for the Terra Bitcoin-native social platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "openai>=1.12.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*", "api*"]
